--- a/src/app/my-projects/projects/projects.component.html
+++ b/src/app/my-projects/projects/projects.component.html
@@ -8,13 +8,14 @@
             <input #descProject type="text" class="form-control" placeholder="Ingresa la descripción">
         </div>
 
-        <span class="input-group-btn">
-            <button class="btn btn-success" type="button" (click)="onCreateProject()"> 
+        <span class="col-md-2 input-group-btn" style="margin-left:0%; padding-left:0px;">
+            <button class="btn btn-success" type="button" (click)="onCreateProject()" style="height: 40px;"> 
                 <i class="fa fa-plus" aria-hidden="true"></i> 
                 Crear Proyecto
             </button>
         </span>
-        <br>
+        <hr>
+        <hr>
     </div>
     <div class="row">
         <!-- TABLA DE MIS PROYECTOS -->
