--- a/src/app/work-space/side-bar/code-list/code-item/code-item.component.html
+++ b/src/app/work-space/side-bar/code-list/code-item/code-item.component.html
@@ -1,6 +1,5 @@
 <li [attr.title]="code.memo"
-  class="list-item"
-  style="cursor: pointer" (click)="onOpenCode()">{{code.name}}
+  class="list-item" (click)="onOpenCode()">{{code.name}}
   <span [ngStyle]="{'color': code.getColor() }">
     &#9679;
   </span>
