clean newAtribute values

--- a/src/app/header/document-modal/document-modal.component.html
+++ b/src/app/header/document-modal/document-modal.component.html
@@ -38,7 +38,7 @@
     Guardar
     </button>
     <button *ngIf="doc._id !== '0'" type="button" class="btn btn-danger" (click)="onDeleteDocument()">
-    Borrar documento
+    Borrar
     </button>
   </div>    
 </div>
