--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,9 +14,6 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Proyecto <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a (click)="onShareProject()" class="header-btn">Compartir</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
                     </ul>
                 </li>
             </ul>
@@ -39,7 +36,12 @@
                 <li>
                     <a href="#" data-toggle="modal" data-target="#exampleModal" data-whatever="Memos">Memos</a>
                 </li>
-                <li><a href="#">Búsqueda</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Búsquedas<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a class="header-btn" (click)="onSimpleQuery()">Por elementos activados.</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">Análisis</a></li>
                 <li><a href="#">Visualización</a></li>
             </ul>
