--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,18 @@ app-root {
 .custom {
     background-color: #e8e8e8;
 }
+
+
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    height: 0px;
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
