page visual fix

--- a/src/app/work-space/content/documents/document-content/document-content.component.css
+++ b/src/app/work-space/content/documents/document-content/document-content.component.css
@@ -1,95 +1,95 @@
 .content-container {
-    background-color: white;
-    overflow-y: scroll;
-    height: -moz-calc(94.8vh - 52px);
-    height: -webkit-calc(94.8vh - 52px);
-    height: calc(94.8vh - 52px);
-    border: #2d3e4f solid 2px;
+  background-color: white;
+  overflow-y: scroll;
+  height: -moz-calc(94.8vh - 52px);
+  height: -webkit-calc(94.8vh - 52px);
+  height: calc(94.8vh - 52px);
+  border: #2d3e4f solid 2px;
 }
 
 
 /* Pages */
 
 .page {
-    margin-top: 2%;
-    border-spacing: 0 10px;
-    width: 20cm;
-    /*float: right;*/
-    margin-left: 1%;
+  margin-top: 2%;
+  border-spacing: 0 10px;
+  width: 20cm;
+  /*float: right;*/
+  margin-left: 1%;
 }
 
 .page-container {
-    /*padding-bottom: 5px;
+  /*padding-bottom: 5px;
     padding-top: 5px;
     padding-left: 5%;
     padding-right: 1%;*/
-    width: 23cm;
-    margin-left: 10%;
-    margin-top: 2%;
+  width: 23cm;
+  margin-left: 10%;
+  margin-top: 2%;
 }
 
 
 /* Lines */
 
 .top-line {
-    box-shadow: 0px 9px 0px 0px white, 0px 0px 0px #d1d1d1, 1px 0 10px -2px #d1d1d1, 1px 0 10px -2px #d1d1d1;
-    padding-top: 15px;
+  box-shadow: 0px 9px 0px 0px white, 0px 0px 0px #d1d1d1, 1px 0 10px -2px #d1d1d1, 1px 0 10px -2px #d1d1d1;
+  padding-top: 15px;
 }
 
 .bottom-line {
-    box-shadow: 9px 0px 0px white, 0 -9px 0px 0px white, 1px 0 10px -2px #d1d1d1, 1px 0 10px -2px #d1d1d1;
-    padding-bottom: 15px;
+  box-shadow: 0px 0px 0px #d1d1d1, 0px -9px 0px 0px white, 1px 0 10px -2px #d1d1d1, 1px 0 10px -2px #d1d1d1;
+  padding-bottom: 15px;
 }
 
 .white-line {
-    box-shadow: 0px 0px 0px 0px white, 0 -9px 0px 0px white, 1px 0 10px -2px #d1d1d1, 1px 0 10px -2px #d1d1d1;
+  box-shadow: 0px 0px 0px 0px white, 0 -9px 0px 0px white, 1px 0 10px -2px #d1d1d1, 1px 0 10px -2px #d1d1d1;
 }
 
 
 /* Text */
 
 .text-area {
-    padding-left: 15px;
-    padding-right: 15px;
-    background-color: white;
-    font-size: 15.5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: white;
+  font-size: 15.5px;
 }
 
 
 /* Quotes */
 
 .quote-empty {
-    color: transparent;
-    width: 0px;
+  color: transparent;
+  width: 0px;
 }
 
 .quote {
-    /* font-weight: bold; */
-    cursor: pointer;
-    padding: none;
-    margin: none;
-    width: 8px;
-    border-left: 2.5px solid;
+  /* font-weight: bold; */
+  cursor: pointer;
+  padding: none;
+  margin: none;
+  width: 8px;
+  border-left: 2.5px solid;
 }
 
 .borderTop-quote {
-    border-top: 2px solid;
+  border-top: 2px solid;
 }
 
 .borderBottom-quote {
-    border-bottom: 2px solid;
+  border-bottom: 2px solid;
 }
 
 s {
-    text-decoration-line: unset;
+  text-decoration-line: unset;
 }
 
  ::selection {
-    background: #d9cfcf;
-    /* WebKit/Blink Browsers */
+  background: #d9cfcf;
+  /* WebKit/Blink Browsers */
 }
 
  ::-moz-selection {
-    background: #d9cfcf;
-    /* Gecko Browsers */
+  background: #d9cfcf;
+  /* Gecko Browsers */
 }
