change prod auth0

--- a/src/app/work-space/side-bar/code-list/code-item/code-item.component.html
+++ b/src/app/work-space/side-bar/code-list/code-item/code-item.component.html
@@ -1,4 +1,4 @@
-<li
+<li [attr.title]="code.memo"
   (contextmenu)="onContextMenu($event)"
   [ngClass]="getItemClass()"
   (dblclick)="onOpenCode()">
