--- a/src/app/work-space/bottom-bar/bottom-bar.component.html
+++ b/src/app/work-space/bottom-bar/bottom-bar.component.html
@@ -5,8 +5,8 @@
         </h4>
         <span class='bottombar-close glyphicon glyphicon-remove' (click)='isOpened=false'></span>
     </div>
-    <div class="col-sm-2 bottombar" id="mysidenav" [ngClass]="isOpened ? 'opened' : 'closed'">
-        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="col-sm-2 bottombar">
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" style="height:100%">
             <app-retrieved-quotes-list></app-retrieved-quotes-list>
         </div>
     </div>
