--- a/src/app/work-space/bottom-bar/retrieved-quotes-list/retrieved-quotes-list.component.html
+++ b/src/app/work-space/bottom-bar/retrieved-quotes-list/retrieved-quotes-list.component.html
@@ -1,5 +1,5 @@
-<div class="" style="max-height:300px">
+<div style="max-height:35%; overflow:auto;">
     <ul class='retrieved-quotes-list'>
-       <app-retrieved-quote-item *ngFor="let quote of retrievedQuotes" [retrievedQuote]="quote"></app-retrieved-quote-item>
+        <app-retrieved-quote-item *ngFor="let quote of retrievedQuotes" [retrievedQuote]="quote"></app-retrieved-quote-item>
     </ul>
 </div>
