--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" *ngIf="(router.url !== '/') && (router.url !== '/signup')">
+<nav class="navbar navbar-default" *ngIf="(router.url !== '/') && (router.url !== '/signup') && (router.url !== '/resetpassword')">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
