--- a/src/app/home/reset-password/reset-password.component.css
+++ b/src/app/home/reset-password/reset-password.component.css
@@ -1,7 +1,6 @@
 /* Pen Title */
 .title {
-  padding-top: 50px;
-  padding-bottom: 25px;
+  padding: 50px 0;
   text-align: center;
   letter-spacing: 2px;
 }
@@ -90,7 +89,7 @@
   margin: 0 0 20px;
   padding: 10px 15px;
   box-sizing: border-box;
-  font-wieght: 400;
+  font-weight: 400;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
@@ -125,7 +124,7 @@
   text-decoration: none;
 }
 
-.signup-error {
+.reset-error {
   color: #E02626;
   margin-bottom: 10px;
 }
