--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,4 @@
     <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
+<ng4-loading-spinner [threshold]="0" [loadingText]="'Cargando...'"> </ng4-loading-spinner>
