--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,10 +39,15 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Búsquedas<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a class="header-btn" (click)="onSimpleQuery()">Por elementos activados.</a></li>
+                        <li><a class="header-btn" (click)="onSimpleQuery()">Por elementos activados</a></li>
                     </ul>
                 </li>
-                <li><a href="#" data-toggle="modal" data-target="#exampleModal">Análisis</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Análisis<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a class="header-btn" (click)="onCodeMatrix()">Matriz de códigos por documento</a></li>
+                    </ul>
+                </li>
                 <li><a href="#" data-toggle="modal" data-target="#exampleModal">Visualización</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
