--- a/src/app/work-space/content/documents/document-content/document-content.component.html
+++ b/src/app/work-space/content/documents/document-content/document-content.component.html
@@ -1,19 +1,18 @@
-<div class="content-container">
-  <table class="page-container">
-    <tr *ngFor="let line of aux; let l = index" [id]="l">
-        <td *ngFor="let quote of colRangeArray; let i = index" [ngClass]="line?.getBracketType(colRange-i-1)" [ngStyle]="{ 'color': line?.getBracketColor(colRange-i-1) }"
-          (click)="onOpenQuoteModal(line?.getRelatedQuote(colRange-i-1)?.quote)" [attr.title]="line?.getBracketTitle(colRange-i-1)"
-          (mouseover)="actualDocumentContent?.setLinesColor(line?.getRelatedQuote(colRange-i-1),colRange-i-1,true)" (mouseout)="actualDocumentContent?.setLinesColor(line?.getRelatedQuote(colRange-i-1),colRange-i-1,false)">
-        </td>
-        <td (contextmenu)="onContextMenu($event)" [ngClass]="line? line.getLineType(): 'white-line'">
-          <s *ngIf="line?.isPainted()">{{line?.preSpanText}}
+<div class="content-container" (scroll)="onScroll($event)">
+    <table class="page-container">
+        <tr *ngFor="let line of aux; let l = index" [id]="l">
+            <td *ngFor="let quote of colRangeArray; let i = index" [ngClass]="line?.getBracketType(colRange-i-1)" [ngStyle]="{ 'color': line?.getBracketColor(colRange-i-1) }" (click)="onOpenQuoteModal(line?.getRelatedQuote(colRange-i-1)?.quote)" [attr.title]="line?.getBracketTitle(colRange-i-1)"
+                (mouseover)="actualDocumentContent?.setLinesColor(line?.getRelatedQuote(colRange-i-1),colRange-i-1,true)" (mouseout)="actualDocumentContent?.setLinesColor(line?.getRelatedQuote(colRange-i-1),colRange-i-1,false)">
+            </td>
+            <td (contextmenu)="onContextMenu($event)" [ngClass]="line? line.getLineType(): 'white-line'">
+                <s *ngIf="line?.isPainted()">{{line?.preSpanText}}
             <span [ngStyle]="{'background-color': line?.getTextColor(colRange-i-1) }">{{line?.spanText}}</span>
             {{line?.postSpanText}}
           </s>
-          <s *ngIf="!line?.isPainted()">{{line?.text}}</s>
-          <br>
-        </td>
-    </tr>
-  </table>
-  <app-options [optionGroups]="menuOptions"></app-options>
+                <s *ngIf="!line?.isPainted()">{{line?.text}}</s>
+                <br>
+            </td>
+        </tr>
+    </table>
+    <app-options [optionGroups]="menuOptions"></app-options>
 </div>
