--- a/src/app/work-space/content/documents/documents.component.html
+++ b/src/app/work-space/content/documents/documents.component.html
@@ -1,11 +1,8 @@
 <div class="col-sm-9" id="main">
-  <div class="col">
-    <app-documents-tabs *ngFor="let doc of this.openedDocuments" 
-    [doc]="doc" 
-    (selected)="onDocumentSelected(doc)"
-    ></app-documents-tabs>
-  </div>
-  <div>
-    <app-document-content [actualDocument]="this.selectedDocument"></app-document-content>
-  </div>
+    <div class="col">
+        <app-documents-tabs *ngFor="let doc of this.openedDocuments" [doc]="doc" (selected)="onDocumentSelected(doc)"></app-documents-tabs>
+    </div>
+    <div>
+        <app-document-content [actualDocument]="this.selectedDocument"></app-document-content>
+    </div>
 </div>
