--- a/src/app/work-space/side-bar/code-list/code-list.component.html
+++ b/src/app/work-space/side-bar/code-list/code-list.component.html
@@ -1,5 +1,5 @@
 <span defaultOverlayTarget></span>
-<div class="panel panel-default" style="max-height:300px">
+<div class="panel panel-default" style="max-height:50%">
     <div class="panel-heading" role="tab" id="headingOne">
         <h4 class="panel-title">
             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseCodeList" aria-expanded="true" aria-controls="collapseOne">
@@ -10,15 +10,12 @@
     <div id="collapseCodeList" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
         <div class="panel-body">
             <div style="overflow:auto; max-height:200px">
-                    <ul class='code-list'>
-                        <app-code-item
-                        *ngFor="let cod of codes"
-                        [code]="cod"></app-code-item>
-                    </ul>
+                <ul class='code-list'>
+                    <app-code-item *ngFor="let cod of codes" [code]="cod"></app-code-item>
+                </ul>
             </div>
-            <div class="input-group">
-                <input class="col-xs-12 form-control" placeholder="Nuevo código" (keyup.enter)="onAddCode()"
-                type="text" [(ngModel)]="newCodeName" name="Nuevo código" id="newCode">
+            <div class="input-group" style="margin-top:10px;">
+                <input class="col-xs-12 form-control" placeholder="Nuevo código" (keyup.enter)="onAddCode()" type="text" [(ngModel)]="newCodeName" name="Nuevo código" id="newCode">
                 <span class="input-group-btn">
                     <button (click)="onAddCode()" class="btn btn-success" type="submit">Agregar</button>
                 </span>
