--- a/src/app/work-space/side-bar/document-list/document-list.component.html
+++ b/src/app/work-space/side-bar/document-list/document-list.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" style="max-height:300px">
+<div class="panel panel-default" style="max-height:50%">
     <div class="panel-heading" role="tab" id="headingOne">
         <h4 class="panel-title">
             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -7,7 +7,7 @@
         </h4>
     </div>
     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-        <div class="panel-body"  style="overflow:auto;max-height:200px">
+        <div class="panel-body" style="overflow:auto;max-height:200px">
             <ul class="document-list">
                 <app-document-item *ngFor="let doc of documents" [document]="doc"></app-document-item>
             </ul>
