--- a/src/app/work-space/side-bar/side-bar.component.html
+++ b/src/app/work-space/side-bar/side-bar.component.html
@@ -1,5 +1,5 @@
 <div class="col-sm-2 sidenav" id="mysidenav" [ngClass]="isOpened ? 'opened' : 'closed'">
-    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" style="max-height:100%">
         <app-document-list></app-document-list>
         <app-code-list></app-code-list>
     </div>
