--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,14 +20,14 @@
             <ul class="nav navbar-nav" *ngIf="router.url.includes('workspace')">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Documentos<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu" *ngxPermissionsOnly="['importar_docs']">
                         <li><input type="file" #files name="files[]" multiple style="display:none;" (change)="onChange($event)" /><a class="header-btn" (click)="files.click()">Importar</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Códigos<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a class="header-btn" (click)="onNewCode()">Nuevo código</a></li>
+                        <li><a class="header-btn" (click)="onNewCode()" *ngxPermissionsOnly="['create_code']">Nuevo código</a></li>
                     </ul>
                 </li>
                 <li>
@@ -39,7 +39,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Búsquedas<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a class="header-btn" (click)="onSimpleQuery()">Por elementos activados.</a></li>
+                        <li><a class="header-btn" (click)="onSimpleQuery()" *ngxPermissionsOnly="['search_activated_quotes']">Por elementos activados.</a></li>
                     </ul>
                 </li>
                 <li><a href="#" data-toggle="modal" data-target="#exampleModal">Análisis</a></li>
