--- a/src/app/work-space/side-bar/code-list/code-list.component.html
+++ b/src/app/work-space/side-bar/code-list/code-list.component.html
@@ -14,7 +14,7 @@
                     <app-code-item *ngFor="let cod of codes" [code]="cod"></app-code-item>
                 </ul>
             </div>
-            <div class="input-group" style="margin-top:10px;">
+            <div class="input-group" style="margin-top:10px;" *ngxPermissionsOnly="['create_code']">
                 <input class="col-xs-12 form-control" placeholder="Nuevo código" (keyup.enter)="onAddCode()" type="text" [(ngModel)]="newCodeName" name="Nuevo código" id="newCode">
                 <span class="input-group-btn">
                     <button (click)="onAddCode()" class="btn btn-success" type="submit">Agregar</button>
