--- a/src/app/work-space/work-space.component.html
+++ b/src/app/work-space/work-space.component.html
@@ -1,5 +1,6 @@
 <div class="row content">
     <app-side-bar></app-side-bar>
     <app-content></app-content>
+    <app-chart-popup></app-chart-popup>
     <app-bottom-bar></app-bottom-bar>
 </div>
