--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,16 +30,11 @@
                         <li><a class="header-btn" (click)="onNewCode()">Nuevo código</a></li>
                     </ul>
                 </li>
-                <li>
-                    <a href="#" data-toggle="modal" data-target="#exampleModal" data-whatever="Citas">Citas</a>
-                </li>
-                <li>
-                    <a href="#" data-toggle="modal" data-target="#exampleModal" data-whatever="Memos">Memos</a>
-                </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Búsquedas<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a class="header-btn" (click)="onSimpleQuery()">Por elementos activados.</a></li>
+                        <li><a class="header-btn" (click)="onSimpleQuery()">Búsqueda Simple</a></li>
+                        <li><a class="header-btn" (click)="onSimpleQuery()">Búsqueda Compleja</a></li>
                     </ul>
                 </li>
                 <li><a href="#" data-toggle="modal" data-target="#exampleModal">Análisis</a></li>
