--- a/src/app/work-space/content/documents/document-content/document-content.component.html
+++ b/src/app/work-space/content/documents/document-content/document-content.component.html
@@ -14,5 +14,6 @@
             </td>
         </tr>
     </table>
+    <!-- <spinner-component [spinnerShow]="aux.length == 0"></spinner-component> -->
     <app-options [optionGroups]="menuOptions"></app-options>
 </div>
