--- a/src/app/work-space/side-bar/document-list/document-list.component.html
+++ b/src/app/work-space/side-bar/document-list/document-list.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" style="max-height:50%">
+<div class="panel panel-default" style="max-height:50%" style="position:relative">
     <div class="panel-heading" role="tab" id="headingOne">
         <h4 class="panel-title">
             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -13,4 +13,5 @@
             </ul>
         </div>
     </div>
+    <!-- <spinner-component [spinnerShow]="documents.lenght == 0"></spinner-component> -->
 </div>
