--- a/src/app/work-space/side-bar/document-list/document-list.component.html
+++ b/src/app/work-space/side-bar/document-list/document-list.component.html
@@ -13,5 +13,7 @@
             </ul>
         </div>
     </div>
-    <!-- <spinner-component [spinnerShow]="documents.lenght == 0"></spinner-component> -->
+    <spinner-component [spinnerShow]="spinner">
+        <h5> Cargando lista de documentos.. </h5>
+    </spinner-component>
 </div>
