simple query editor

--- a/src/app/work-space/work-space.component.html
+++ b/src/app/work-space/work-space.component.html
@@ -1,6 +1,6 @@
 <div class="row content">
     <app-side-bar></app-side-bar>
     <app-content></app-content>
-    <app-chart-popup></app-chart-popup>
+    <app-popup-window></app-popup-window>
     <app-bottom-bar></app-bottom-bar>
 </div>
