--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,8 +34,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Búsquedas<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a class="header-btn" (click)="onSimpleQuery()">Búsqueda Simple</a></li>
-                        <li><a class="header-btn" (click)="onSimpleQuery()">Búsqueda Compleja</a></li>
-                        <li><a class="header-btn" (click)="onSimpleQuery()">Por elementos activados</a></li>
+                        <li><a class="header-btn" (click)="onComplexQuery()">Búsqueda Compleja</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
