--- a/src/app/work-space/chart-popup/chart-popup.component.html
+++ b/src/app/work-space/chart-popup/chart-popup.component.html
@@ -1,9 +1,34 @@
-<div *ngIf="isOpened" class="drag-block container" [zIndex]="10000" 
-  style="position:absolute;right:0px; top:0px;background-color:aqua;" ngDraggable>
-  <div class="row">
-    <span>Resultados</span>
+<div *ngIf="isOpened" class="drag-block container modal-content chart-popup" 
+  [zIndex]="10000" ngDraggable>
+  <div class="row modal-header">
+    <button type="button" (click)="onClose()" class="close col-xs-1" style="color:black;">&times;</button>
+    <h5 class="modal-title">Resultados</h5>
   </div>
-  <div class="row">
-
+  <div *ngIf="result" class="row">
+      <div class="col-md-12" style="margin-bottom: 10px">
+        <table class="table table-striped table-responsive table-condensed">
+          <thead>
+              <tr>
+                <th> Documentos\Códigos</th>
+                <th *ngFor="let code of result.codes">{{code.name}}</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr *ngFor="let doc of result.docs">
+                <td style="font-weight:bold;">{{doc.name}}</td>
+                <td *ngFor="let oc of doc.ocurrences">{{oc}}</td>
+              </tr>
+          </tbody>
+        </table>
+      </div>
+  </div>
+  <div *ngIf="result" class="row" style="text-align:center;">
+    <fusioncharts
+      [width]="width"
+      [height]="height"
+      [type]="type"
+      [dataFormat]="dataFormat"
+      [dataSource]="dataSource">
+    </fusioncharts>
   </div>
 </div>
