--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,9 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Proyecto <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a (click)="onShareProject()" class="header-btn">Compartir</a></li>
+                        <li *ngxPermissionsOnly="['share_project']">
+                            <a (click)="onShareProject()" class="header-btn">Compartir</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
