--- a/src/app/work-space/side-bar/code-list/code-list.component.html
+++ b/src/app/work-space/side-bar/code-list/code-list.component.html
@@ -1,5 +1,5 @@
 <span defaultOverlayTarget></span>
-<div class="panel panel-default" style="max-height:50%">
+<div class="panel panel-default" style="max-height:50; position:relative">
     <div class="panel-heading" role="tab" id="headingOne">
         <h4 class="panel-title">
             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseCodeList" aria-expanded="true" aria-controls="collapseOne">
@@ -22,4 +22,7 @@
             </div>
         </div>
     </div>
+    <spinner-component [spinnerShow]="spinner">
+        <h5> Cargando lista de codigos.. </h5>
+    </spinner-component>
 </div>
