--- a/src/app/header/quote-modal/quote-modal.component.html
+++ b/src/app/header/quote-modal/quote-modal.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-    <div class="modal-header">
-        <button type="button" (click)="onClose()" class="close col-xs-1">&times;</button>
+    <div class="panel-heading modal-header">
+        <span class='btn-close glyphicon glyphicon-remove' (click)='onClose()'></span>
         <h5 class="modal-title">Editar cita</h5>
     </div>
-    <div class="row">
+    <div class="row panel-body">
         <div class="col-xs-12">
             <div class="form-group row">
                 <label for="inputCode" class="col-xs-2 control-label">Código</label>
