--- a/src/app/work-space/popup-window/simple-query-editor/simple-query-editor.component.html
+++ b/src/app/work-space/popup-window/simple-query-editor/simple-query-editor.component.html
@@ -1,7 +1,8 @@
  
-<div class="container">
-  <div class="panel">
-    <div class="panel-heading">Búsqueda Simple
+<div class="container modal-content">
+  <div>
+    <div class="panel-heading modal-header">
+      <h5 class="modal-title">Búsqueda Simple</h5>
       <span class='btn-close glyphicon glyphicon-remove' (click)='onClose()'></span>
     </div>
     <div class="panel-body">
