--- a/src/app/header/document-modal/document-modal.component.html
+++ b/src/app/header/document-modal/document-modal.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-  <div class="modal-header">
-      <button type="button" (click)="onClose()" class="close col-xs-1">&times;</button>
+  <div class="panel-heading modal-header">
+      <span class='btn-close glyphicon glyphicon-remove' (click)='onClose()'></span>
       <h5 class="modal-title">Editar documento: {{doc.name}}</h5>
   </div>
-  <div class="row">
+  <div class="row panel-body">
       <div class="col-xs-12" style="overflow:auto;max-height:200px">
           <table class="table table-striped" >
               <tbody>
