--- a/src/app/my-projects/project-share-modal/project-share-modal.component.html
+++ b/src/app/my-projects/project-share-modal/project-share-modal.component.html
@@ -1,12 +1,9 @@
 <div class="container-fluid">
-    <div class="modal-header">
-        <button type="button" (click)="onClose()" class="close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+    <div class="panel-heading modal-header">
+        <span class='btn-close glyphicon glyphicon-remove' (click)='onClose()'></span>
         <h5 class="modal-title">Compartir proyecto {{project.name}}</h5>
     </div>
-
-    <div class="row">
+    <div class="row panel-body">
         <form #collForm="ngForm" *ngIf="active">
             <div class="col-md-7">
                 <div class="input-group form-group">
