--- a/src/app/work-space/popup-window/chart-popup/chart-popup.component.html
+++ b/src/app/work-space/popup-window/chart-popup/chart-popup.component.html
@@ -1,33 +1,35 @@
 <div class="container modal-content chart-popup">
-  <div class="row modal-header">
-    <button type="button" (click)="onClose()" class="close col-xs-1" style="color:black;">&times;</button>
+  <div class="row panel-heading modal-header">
+    <span class='btn-close glyphicon glyphicon-remove' (click)='onClose()'></span>
     <h5 class="modal-title">Resultados</h5>
   </div>
-  <div *ngIf="result" class="row">
-      <div class="col-md-12" style="margin-bottom: 10px">
-        <table class="table table-striped table-responsive table-condensed">
-          <thead>
-              <tr>
-                <th> Documentos\Códigos</th>
-                <th *ngFor="let code of result.codes">{{code.name}}</th>
-              </tr>
-          </thead>
-          <tbody>
-              <tr *ngFor="let doc of result.docs">
-                <td style="font-weight:bold;">{{doc.name}}</td>
-                <td *ngFor="let oc of doc.ocurrences">{{oc}}</td>
-              </tr>
-          </tbody>
-        </table>
-      </div>
-  </div>
-  <div *ngIf="result" class="row" style="text-align:center;">
-    <fusioncharts
-      [width]="width"
-      [height]="height"
-      [type]="type"
-      [dataFormat]="dataFormat"
-      [dataSource]="dataSource">
-    </fusioncharts>
+  <div class="panel-body">
+    <div *ngIf="result" class="row">
+        <div class="col-md-12" style="margin-bottom: 10px">
+          <table class="table table-striped table-responsive table-condensed">
+            <thead>
+                <tr>
+                  <th> Documentos\Códigos</th>
+                  <th *ngFor="let code of result.codes">{{code.name}}</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let doc of result.docs">
+                  <td style="font-weight:bold;">{{doc.name}}</td>
+                  <td *ngFor="let oc of doc.ocurrences">{{oc}}</td>
+                </tr>
+            </tbody>
+          </table>
+        </div>
+    </div>
+    <div *ngIf="result" class="row" style="text-align:center;">
+      <fusioncharts
+        [width]="width"
+        [height]="height"
+        [type]="type"
+        [dataFormat]="dataFormat"
+        [dataSource]="dataSource">
+      </fusioncharts>
+    </div>
   </div>
 </div>
