--- a/src/styles.css
+++ b/src/styles.css
@@ -29,3 +29,27 @@ html {
 ::-webkit-scrollbar-thumb {
     background: #FF0000;
 }
+
+.btn-close {
+    position: absolute !important;
+    right: 0;
+    padding: 2px;
+    color: #9d9f9e;
+}
+
+.panel {
+    border: 0.5px solid gray;
+    box-shadow: 0px 0px 10px 5px #888888;
+  }
+  
+.panel-heading {
+    background-color: #2c3e50;
+    color: white;
+}
+
+.container-fluid {
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
