--- a/src/app/work-space/bottom-bar/bottom-bar.component.html
+++ b/src/app/work-space/bottom-bar/bottom-bar.component.html
@@ -3,7 +3,10 @@
         <h4 class="bottom-bar-title">
             Citas Recuperadas
         </h4>
-        <span class='bottombar-close glyphicon glyphicon-remove' (click)='isOpened=false'></span>
+        <div class="bottombar-actions">
+            <span class="glyphicon glyphicon-refresh" (click)="onRefresh()"></span>
+        </div>
+        <span class='bottombar-close glyphicon glyphicon-remove' (click)='onClose()'></span>
     </div>
     <div class="col-sm-2 bottombar">
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" style="height:100%">
