--- a/src/app/work-space/side-bar/code-list/code-list.component.css
+++ b/src/app/work-space/side-bar/code-list/code-list.component.css
@@ -1,8 +1,17 @@
 .panel-heading {
     background-color: #979B9C;
     color: #203F30;
+    height: 35px;
 }
 
 .code-list {
     list-style-type: none;
+}
+
+.actions {
+    cursor: pointer;
+}
+
+.action-selected {
+    color: red;
 }
