--- a/src/app/work-space/side-bar/code-list/code-list.component.html
+++ b/src/app/work-space/side-bar/code-list/code-list.component.html
@@ -1,15 +1,17 @@
 <span defaultOverlayTarget></span>
-<div class="panel panel-default" style="max-height:300px">
+<div class="panel panel-default" style="max-height:50%; height: 50%;">
     <div class="panel-heading" role="tab" id="headingOne">
-        <h4 class="panel-title">
-            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseCodeList" aria-expanded="true" aria-controls="collapseOne">
-                    Códigos
-            </a>
+        <h4 class="panel-title pull-left">
+            Códigos
         </h4>
+        <div class="actions pull-right">
+            <span class="glyphicon glyphicon-list-alt" [title]="noSelection ? 'Activar Todos' : 'Desactivar Todos'"
+            (click)="onSelectAll()" [(ngClass)]="selectAllClass"></span>
+        </div>
     </div>
     <div id="collapseCodeList" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
         <div class="panel-body">
-            <div style="overflow:auto; max-height:200px">
+            <div style="overflow:auto; max-height:215px">
                     <ul class='code-list'>
                         <app-code-item
                         *ngFor="let cod of codes"
