--- a/src/app/work-space/side-bar/document-list/document-list.component.css
+++ b/src/app/work-space/side-bar/document-list/document-list.component.css
@@ -1,8 +1,18 @@
 .panel-heading {
     background-color: #979B9C;
     color: #203F30;
+    height: 35px;
 }
 
 .document-list {
     list-style-type: none;
 }
+
+.actions {
+    cursor: pointer;
+}
+
+.action-selected {
+    color: red;
+}
+
