--- a/src/app/work-space/side-bar/document-list/document-list.component.html
+++ b/src/app/work-space/side-bar/document-list/document-list.component.html
@@ -1,13 +1,15 @@
-<div class="panel panel-default" style="max-height:300px">
+<div class="panel panel-default" style="max-height:50%; height: 50%;">
     <div class="panel-heading" role="tab" id="headingOne">
-        <h4 class="panel-title">
-            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        <h4 class="panel-title pull-left">
             Documentos
-            </a>
         </h4>
+        <div class="actions pull-right">
+            <span class="glyphicon glyphicon-list-alt" [title]="noSelection ? 'Activar Todos' : 'Desactivar Todos'"
+            (click)="onSelectAll()" [(ngClass)]="selectAllClass"></span>
+        </div>
     </div>
     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-        <div class="panel-body"  style="overflow:auto;max-height:200px">
+        <div class="panel-body"  style="overflow:auto;max-height:270px">
             <ul class="document-list">
                 <app-document-item *ngFor="let doc of documents" [document]="doc"></app-document-item>
             </ul>
