--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Proyecto <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li *ngxPermissionsOnly="['share_project']">
+                        <li [ngClass]="{ 'disabled': !permissions.includes('share_project')}">
                             <a (click)="onShareProject()" class="header-btn">Compartir</a>
                         </li>
                     </ul>
@@ -23,7 +23,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Documentos<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li *ngxPermissionsOnly="['importar_docs']">
+                        <li [ngClass]="{ 'disabled': !permissions.includes('importar_docs')}">
                             <input type="file" #files name="files[]" multiple style="display:none;" (change)="onChange($event)" />
                             <a class="header-btn" (click)="files.click()">Importar</a>
                         </li>
@@ -32,7 +32,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Códigos<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li *ngxPermissionsOnly="['create_code']">
+                        <li [ngClass]="{ 'disabled': !permissions.includes('create_code')}">
                             <a class="header-btn" (click)="onNewCode()">Nuevo código</a>
                         </li>
                     </ul>
@@ -46,7 +46,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Búsquedas<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li *ngxPermissionsOnly="['search_activated_quotes']">
+                        <li [ngClass]="{ 'disabled': !permissions.includes('search_activated_quotes')}">
                             <a class="header-btn" (click)="onSimpleQuery()">Por elementos activados.</a>
                         </li>
                     </ul>
