--- a/src/app/work-space/content/documents/documents.component.html
+++ b/src/app/work-space/content/documents/documents.component.html
@@ -5,8 +5,17 @@
     <div>
         <app-document-content [actualDocument]="this.selectedDocument"></app-document-content>
     </div>
-    <spinner-component [spinnerShow]="spinner">
+    <spinner-component [spinnerShow]="spinnerDocuments">
         <h2> Cargando documentos.. </h2>
+        <div class="sk-folding-cube">
+            <div class="sk-cube1 sk-cube"></div>
+            <div class="sk-cube2 sk-cube"></div>
+            <div class="sk-cube4 sk-cube"></div>
+            <div class="sk-cube3 sk-cube"></div>
+        </div>
+    </spinner-component>
+    <spinner-component [spinnerShow]="spinnerCoding">
+        <h2> Codificando.. </h2>
         <div class="sk-folding-cube">
             <div class="sk-cube1 sk-cube"></div>
             <div class="sk-cube2 sk-cube"></div>
