--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
                     </ul>
                 </li>
             </ul>
-            <ul class="nav navbar-nav" *ngIf="router.url.includes('workspace')">
+            <ul class="nav navbar-nav " *ngIf="router.url.includes('workspace')">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Documentos<span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -37,12 +37,6 @@
                         </li>
                     </ul>
                 </li>
-                <li>
-                    <a href="#" data-toggle="modal" data-target="#exampleModal" data-whatever="Citas">Citas</a>
-                </li>
-                <li>
-                    <a href="#" data-toggle="modal" data-target="#exampleModal" data-whatever="Memos">Memos</a>
-                </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Búsquedas<span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -53,6 +47,10 @@
                 </li>
                 <li><a href="#" data-toggle="modal" data-target="#exampleModal">Análisis</a></li>
                 <li><a href="#" data-toggle="modal" data-target="#exampleModal">Visualización</a></li>
+                <li style="display: flex;margin: 10px;">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search" style="height: 40px;">
+                    <button class="btn btn-success" style="height:  40px;" (click)='searchInDoc()'>Search</button>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a routerLink='/myprojects' *ngIf="this.authsvc.isAuthenticated() && router.url.includes('workspace')"> Mis Proyectos </a></li>
