--- a/src/app/header/code-modal/code-modal.component.html
+++ b/src/app/header/code-modal/code-modal.component.html
@@ -12,7 +12,7 @@
             <div class="input-group col-md-4">
                 <span class="input-group-addon">Color</span>
                 <input [(colorPicker)]="color" [cpOKButton]="true" [cpAlphaChannel]="'disabled'" [style.background]="color" [class]="'colorInput col-xs-12 form-control'" [cpPosition]="'bottom'" [cpCancelButton]="true" [cpCancelButtonClass]="'btn btn-danger'" [cpOKButtonClass]="'btn btn-success'"
-                    [cpPositionOffset]="'-300%'" />
+                    [cpPositionOffset]="'-300%'" [cpOutputFormat]="'rgba'" />
             </div>
             <div class="input-group">
                 <span class="input-group-addon">Descripción</span>
