--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -40,7 +40,8 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Análisis<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a class="header-btn" (click)="onCodeMatrix()">Matriz de códigos por documento</a></li>
+                        <li><a class="header-btn" (click)="onCodeMatrix(false)">Matriz de códigos por documento</a></li>
+                        <li><a class="header-btn" (click)="onCodeMatrix(true)">Matriz de co-ocurrencia de códigos</a></li>
                     </ul>
                 </li>
                 <li><a href="#" data-toggle="modal" data-target="#exampleModal">Visualización</a></li>
