hotkeys and scroll in project table in pregress

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -49,6 +49,8 @@
                 <li><a href="#" data-toggle="modal" data-target="#exampleModal">Visualización</a></li>
                 <li style="display: flex;margin: 10px;">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" style="height: 40px;">
+                    <button class="btn btn-success" style="height:  20px;" (click)='nextResult()'><</button>
+                    <button class="btn btn-success" style="height:  20px;" (click)='nextResult()'>></button>
                     <button class="btn btn-success" style="height:  40px;" (click)='searchInDoc()'>Search</button>
                 </li>
             </ul>
