--- a/src/app/my-projects/projects/projects.component.html
+++ b/src/app/my-projects/projects/projects.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="row">
         <!-- TABLA DE MIS PROYECTOS -->
-        <div class="container-fluid">
+        <div class="container-fluid" style="height: -moz-calc(100vh - 52px);height: -webkit-calc(100vh - 52px);height: calc(100vh - 52px);">
             <div class="row">
                 <h3 class="col-xs-6">Tus proyectos</h3>
                 <div class="col-xs-2">
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="panel panel-default">
-                <table style="position:relative" class="table table-striped" [mfData]="projects | dataFilter : filterQuery" #mf="mfDataTable" [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
+                <table style="position:relative;" class="table table-striped" [mfData]="projects | dataFilter : filterQuery" #mf="mfDataTable" [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
                     <thead>
                         <tr>
                             <th colspan="1">
@@ -77,7 +77,7 @@
                             </th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody style=" overflow-y:scroll; max-height: 50%;">
                         <tr app-project-item *ngFor="let proj of mf.data" [project]="proj">
                         </tr>
                     </tbody>
