--- a/src/app/work-space/side-bar/document-list/document-list.component.html
+++ b/src/app/work-space/side-bar/document-list/document-list.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" style="max-height:50%; height: 50%;">
+<div class="panel panel-default" style="max-height:50%; height: 50%; position: relative;">
     <div class="panel-heading" role="tab" id="headingOne">
         <h4 class="panel-title pull-left">
             Documentos
