--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -38,7 +38,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Análisis<span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Búsqueda<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li [ngClass]="{ 'disabled': permissions && !permissions.includes('search_activated_quotes')}">
                             <a class="header-btn" (click)="onSimpleQuery()">Búsqueda Simple.</a>
